[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ping3"
description = "A pure python3 version of ICMP ping implementation using raw socket."
requires-python = ">=3.5"
readme = "README.md"
keywords = ["python3", "ping", "icmp", "socket", "tool"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []
dynamic = ["version"]

[[project.authors]]
name = "Kyan"
email = "kai@kyan001.com"

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/kyan001/ping3"
Changelog = "https://github.com/kyan001/ping3/blob/master/CHANGELOG.md"
"Issue Tracker" = "https://github.com/kyan001/ping3/issues"
"Source Code" = "https://github.com/kyan001/ping3"

[project.scripts]
ping3 = "ping3.command_line:main"

[tool.setuptools]
py-modules = ["ping3"]

[tool.setuptools.dynamic]
version = {attr = "ping3.__version__"}

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests"]
